Fixed spacing on focused sections triggered by on-page links

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -6,6 +6,7 @@
  * Authors: Iliya Melishev
  */
 
+
 section#header {
 	margin-top: 71px;
 }
@@ -131,7 +132,7 @@ span.baloon.webdev {
  */
 
 section#about {
-	padding: 0 0.5em;
+	padding: 2rem 0.5em;
 	background-color: @color_text_dark;
 	color: white;
 
@@ -348,7 +349,7 @@ section#main_subjects a {
 */
 
 section#for_who {
-	padding: 1rem 0.5rem;
+	padding: 2rem 0.5rem;
 	text-align: center;
 
 	& h1 {
