--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -53,3 +53,10 @@ header nav {
 		}
 	}
 }
+
+:target:before {
+	 content: " "; 
+	 display: block; 
+	 width: 0; 
+	 height: 2rem;
+}
