--- a/site/styles/header_mobile.less
+++ b/site/styles/header_mobile.less
@@ -51,3 +51,10 @@ div.mobile_menu {
 		width: 100%;
 	}
 }
+
+:target:before {
+	 content: ''; 
+	 display: block; 
+	 width: 0; 
+	 height: 3rem;
+}
